--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -488,7 +488,7 @@ If you have a project I can help with, please get in touch.</span>
     </div>
 </footer>
 
-<script class="scripts" type="text/javascript" src="../js/API.js"></script>
-<script class="scripts" type="text/javascript" src="../js/createTemplate.js"></script></body>
+
+                          </body>
                         </html>
                     
